src/objects/QIRS_Business_Notification_List__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <label>Alert Type</label>
        <picklist>
            <picklistValues>
                <fullName>NPI Launch Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Shipment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>zzGlobal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzMobile Broadband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzCustomer Experience Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Networks Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Mobile Network Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Networks Global Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Business Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BN-{000000}</displayFormat>
        <label>Business Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Notification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>